--- a/main.html
+++ b/main.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link rel="stylesheet" type="text/css" href="https://nipz58.github.io/newtab-orslok/style.css">
+<link rel="stylesheet" type="text/css" href="https://itzream.github.io/prueba2/style.css">
 
 	<title>New Tab</title>
 </head>
@@ -29,7 +29,7 @@
 	</div>
 
 	<div class="whatsapp">
-		<a href="https://messenger.com" style="display:block;height:100%;width:100%"></a>
+		<a href="messenger.com" style="display:block;height:100%;width:100%"></a>
 	</div>
 
 	<div class="amazon">
@@ -43,7 +43,7 @@
 
 <a href="https://twitter.com/Nipz58" class="nipz58">@nipz58</a>
 
-<a href="https://nipz58.github.io/newtab-orslok/changelog.html" target="_blank" class="changelog">changelog</a>
+<a href="https://itzream.github.io/prueba2/changelog.html" target="_blank" class="changelog">changelog</a>
 
 </body>
 </html>
