--- a/main.html
+++ b/main.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link rel="stylesheet" type="text/css" href="https://itzream.github.io/prueba2/style.css">
+<link rel="stylesheet" type="text/css" href="https://ItzReam.github.io/Prueba2/style.css">
 
 	<title>New Tab</title>
 </head>
@@ -43,7 +43,7 @@
 
 <a href="https://twitter.com/Nipz58" class="nipz58">@nipz58</a>
 
-<a href="https://itzream.github.io/prueba2/changelog.html" target="_blank" class="changelog">changelog</a>
+<a href="https://Itzream.Github.io/prueba2/changelog.html" target="_blank" class="changelog">changelog</a>
 
 </body>
 </html>
