--- a/main.html
+++ b/main.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link rel="stylesheet" type="text/css" href="https://ItzReam.github.io/Prueba2/style.css">
+<link rel="stylesheet" type="text/css" href="https://nipz58.github.io/newtab-orslok/style.css">
 
 	<title>New Tab</title>
 </head>
