--- a/main.html
+++ b/main.html
@@ -30,7 +30,7 @@
 	</div>
 
 	<div class="whatsapp">
-		<a href="messenger.com" style="display:block;height:100%;width:100%"></a>
+		<a href="https://messenger.com" style="display:block;height:100%;width:100%"></a>
 	</div>
 
 	<div class="amazon">
